# paper-search-plus-mcp

./: CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  smithery.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: capability-matrix.md
paper_search_mcp/: server.py
paper_search_mcp/academic_platforms/: core.py  dblp.py  europe_pmc.py  hal.py  openalex.py  pmc.py  ssrn.py  zenodo.py
paper_search_plus_mcp/: __init__.py  catalog.py  deduplication.py  paper.py  server.py
paper_search_plus_mcp/academic_platforms/: __init__.py  arxiv.py  biorxiv.py  core.py  crossref.py  dblp.py  europe_pmc.py  hal.py  openalex.py  pmc.py  pubmed.py  semantic.py  ssrn.py  zenodo.py
tests/: conftest.py  test_contracts.py  test_deduplication.py  test_searchers.py  test_server.py  test_zenodo.py
tests/fixtures/golden/: paper_record.json  source_capabilities.json  tool_names.json
tests/live/: test_live_smoke.py
