[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paper-search-plus-mcp"
version = "0.2.0"
authors = [
  { name = "P.S Zhang", email = "pengsongzhang96@gmail.com" },
  { name = "Vincent Koc", email = "vincentkoc@users.noreply.github.com" },
]
description = "A curated MCP server for searching and downloading academic papers from open and official sources."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "requests>=2.32.0",
    "feedparser>=6.0.11",
    "fastmcp",
    "mcp[cli]>=1.6.0",
    "PyPDF2>=3.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0", # Better HTML parser for BeautifulSoup
    "httpx[socks]>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[project.scripts]
paper-search-plus-mcp = "paper_search_plus_mcp.server:main"

[tool.hatch.build.targets.sdist]
include = [
    "/paper_search_plus_mcp",
    "/tests",
    "/docs",
    "/README.md",
    "/LICENSE",
    "/CONTRIBUTING.md",
    "/pyproject.toml",
    "/smithery.yaml",
]

[tool.hatch.build.targets.wheel]
packages = ["paper_search_plus_mcp"]
